[gd_scene load_steps=7 format=2]

[ext_resource path="res://Src/Garbage.gd" type="Script" id=1]
[ext_resource path="res://Src/Actionable.tscn" type="PackedScene" id=2]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.5
bottom_radius = 0.5
height = 1.0

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.352941, 0.352941, 0.352941, 1 )

[sub_resource type="CylinderShape" id=2]
radius = 0.5
height = 1.0

[sub_resource type="CylinderShape" id=3]

[node name="Garbage" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="Actionable" parent="." instance=ExtResource( 2 )]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="action_from_player" from="Actionable" to="." method="_on_Actionable_action_from_player"]
